--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&display=swap');
 body{
     font-family: "Inter", sans-serif;
     background: rgb(72, 71, 71);
+}
+.second-font{
+    font-family: "Corinthia", cursive;
+    font-size: 100px;
 }
 
 *{
@@ -12,15 +17,17 @@ body{
 }
 
 /* navbar section */
-.container{
-    width: 50%;
-    padding-top: 50px;
-    margin: 0 auto;
-}
+
 .navbar{
     display: flex;
-    justify-content: space-between;
+    padding-top: 40px;
     align-items: center;
+    margin-bottom: 50px;
+    justify-content: space-evenly;
+    flex-direction: row;
+   
+    
+    margin: 0 auto;
     
 }
 .nav-option{
@@ -60,7 +67,58 @@ font-weight: 800;
     display: none;
 }
 
+/* banner section */
+.banner-container{
+    width: 80%;
+    border: 2px solid goldenrod;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+    margin: 0 auto;
 
+}
+.banner-heading{
+font-size: 78px;
+font-weight: 900;
+color: white;
+text-align: left;
+}
+.heading-word-style{
+    font-style: italic;
+    
+}
+.banner-paragraph{
+
+font-size: 16px;
+font-weight: 400;
+color: #8c8c8c;
+margin-top: 25px;
+margin-bottom: 25px;
+}
+.btn-1{
+    width: 224px;
+    height: 54px;
+    border-radius: 42px;
+    background-color:rgb(230, 83, 60);
+    border: none;
+    margin: 0px 14px;
+    color: white;
+    font-size: 20px;
+
+
+}
+
+.btn-2{
+    width: 224px;
+    height: 54px;
+    border-radius: 42px;
+    color: white;
+    border: 1px solid white;
+    background: transparent;
+    font-size: 20px;
+    
+}
 
 
 
@@ -90,4 +148,27 @@ font-weight: 800;
         color: white;
         display: block;
     }
+
+    .banner-container{
+        flex-direction: column;
+    }
+    .banner-heading{
+        padding-top: 40px;
+        font-size: 50px;
+        font-weight: 500;
+    }
+    .btn{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        width: 380px;
+        height: 50px;
+    }
+    
+
+
+
+
 }
