--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,6 +54,7 @@ font-weight: 800;
 .nav-option p{
     color: white;
     font-size: 18px;
+    line-height: 24px;
 }
 .span{
     background-color:rgb(230, 83, 60);
@@ -140,6 +141,7 @@ font-weight: 900;
     font-size: 14px;
     margin-top: 20px;
     margin-bottom: 40px;
+    line-height: 24px;
 }
 
 
@@ -176,9 +178,59 @@ font-weight: 900;
 }
 
 
+/* Run an extra mile Easily section  Start*/
 
+.mile-container{
+    max-width: 1060px;
+    height: 371px;
+    display: flex;
+    justify-content: center;
+    background-color: #222222;
+    margin: 0px auto;
+    gap: 158px;
+    margin-top: 70px;
+    border-radius: 18px;
+}
+.mile-text-content{
+    padding-top: 40px;
+    padding-left: 55px;
+}
+.mile-image-content{
+  
+    
+}
 
+.mile-image-content img{
+    margin-top: 40px;
+    margin-bottom: 20px;
+    width:85%;
+    height: 80%;
+    border-radius: 18px;
+}
 
+.mile-heading{
+    color: white;
+    font-size: 48px;
+    font-weight: 900;
+    
+}
+.mile-paragraph{
+    color: #8c8c8c;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+.join-btn{
+    width: 224px;
+    height: 54px;
+    border-radius: 42px;
+    background-color:rgb(230, 83, 60);
+    border: none;
+    margin: 0px 14px;
+    color: white;
+    font-size: 20px;
+}
 
 
 
@@ -223,9 +275,51 @@ font-weight: 900;
     .image-content{
         display: flex;
         flex-direction: column;
+    }
+    .mile-container{
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        margin-left: 12px;
+        margin-right: 12px;
+        height: auto;
         
     }
 
+    /* .mile-container{
+        max-width: 1060px;
+        height: 371px;
+        display: flex;
+        justify-content: center;
+        background-color: #222222;
+        margin: 0px auto;
+        gap: 158px;
+        margin-top: 70px;
+        border-radius: 18px;
+    } */
 
 
-}
+
+
+    
+
+    .mile-image-content img{
+        width: 90%;
+        margin: 15px;
+    }
+
+
+    .mile-paragraph{
+       
+        font-size: 13px;
+        font-weight: 400;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    
+
+
+
+
+    }
