--- a/CSS/style.css
+++ b/CSS/style.css
@@ -233,7 +233,77 @@ font-weight: 900;
 }
 
 
+/* Meet Our Teams Section Starts */
 
+.team-container{
+    max-width: 1440px;
+    border: 2px solid rebeccapurple;
+    margin: 0px auto;
+    margin-top: 40px;
+}
+.team-text-content{
+    text-align: center;
+}
+.team-heading{
+    color:white;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.team-paragraph{
+    color: #8c8c8c;
+    font-size: 14px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    line-height: 24px;
+}
+
+
+.team-container img{
+    width: 90%;     
+}
+
+
+.row-1, .row-2{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    background-color: #222222; 
+    padding: 20px;
+    border-radius: 18px;
+}
+.row-2{
+    margin-top: 20px;
+}
+
+.image-title h5{
+    color: white;
+    font-size: 20px;
+}
+
+.image-title p{
+    color: #8c8c8c;
+    font-size: 14px;
+}
+
+.image-title{
+    position: relative;
+   
+   
+}
+
+.image-title img{
+    
+    border-radius: 15px;
+}
+
+.image-title-para{
+    position: absolute;
+    top: 320px;
+    margin-left: 30px;
+    
+}
+
+ 
 
 
 
@@ -286,22 +356,6 @@ font-weight: 900;
         
     }
 
-    /* .mile-container{
-        max-width: 1060px;
-        height: 371px;
-        display: flex;
-        justify-content: center;
-        background-color: #222222;
-        margin: 0px auto;
-        gap: 158px;
-        margin-top: 70px;
-        border-radius: 18px;
-    } */
-
-
-
-
-    
 
     .mile-image-content img{
         width: 90%;
@@ -317,8 +371,16 @@ font-weight: 900;
         margin-bottom: 20px;
     }
 
-    
-
+    .row-1, .row-2{
+        display: grid;
+        grid-template-columns:1fr;
+        
+    }
+    .image-title-para{
+        top: 260px;
+        margin-left: 30px;
+        
+    }
 
 
 
