--- a/CSS/style.css
+++ b/CSS/style.css
@@ -146,13 +146,13 @@ margin-bottom: 25px;
     height: 98px;
     background-color: #393939;
     border-radius: 8px;
-    padding: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 12px;
-    
-    
+    position: absolute;
+    bottom: 80px;
+    right: 256px;
 }
 .circle{
     width: 40px;
@@ -178,7 +178,7 @@ margin-bottom: 25px;
 .habit-container{
     max-width: 1440px;
     margin: 0px auto;
-    margin-top: 40px;
+    margin-top: 80px;
 }
 
 .habits-heading{
